--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
 <section>
 <aside>
-<h3> CATS IN THE NEWS </h3>
+<h3> CATS IN THE NEWS UPDATED VERSION </h3>
 <p>
     Chew iPad power cord why must they do
     that, grab pompom in mouth and put in
