updated file structure

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     </header>
 <section>
 <aside>
-<h3> CATS IN THE NEWS UPDATED VERSION </h3>
+<h3>CATS IN THE NEWS</h3>
+<h2>UPDATED VERSION</h2>
 <p>
     Chew iPad power cord why must they do
     that, grab pompom in mouth and put in
