--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Kitties to go</title>
-    <link rel="stylesheet" type="text/css" href="kitties.css">
+    <link rel="stylesheet" type="text/css" href="styles/kitties.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -45,11 +45,8 @@
 
 </aside>
 </section>
-<footer>
-    <img src="images/lesson04-mock5-cat-logo.png" alt="cat logo">
-    <p>Aborpos nisto inci tet aut que volupti beruptiberro to ex
-        esseque invenienihil imaximu scideru ptistiusam consequunt</p>
-        <br>
+
+<footer class="footerimage">
     <p>Footer link 1 / Footer link 2 / Footer link 3 / Footer link 4</p>
         <br>
     <p>© 2018 Kitties To Go!, LLC | Seattle, WA</p>
