--- a/cat-of-the-week.html
+++ b/cat-of-the-week.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
@@ -10,45 +9,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/aef11390a8.js" crossorigin="anonymous"></script>
-  </head>
+</head>
 
 <body>
-    <header>
-        
-    </header>
-
-    <section>
-
-        Empty
-    </section>
+<header>
 <section>
-<aside>
-<h3>CATS IN THE NEWS</h3>
-<h2>UPDATED VERSION</h2>
-<p>
-    Chew iPad power cord why must they do
-    that, grab pompom in mouth and put in
-    water dish. </p>
-<a href="">Find out more >></a>
+Featured Cat of the Week
+</section>
+</header>
 
+<section>
 
-<p>
-    Chew iPad power cord why must they do
-    that, grab pompom in mouth and put in
-    water dish.
-    
-</p>
-
-<a href="">Find out more >></a>
-
-<h3> CAT OF THE WEEK </h3>
-<figure>
-    <img src="images/lesson04-mock3-sidebar-cat.jpg" alt="photo of a grey cat with green eyes">
-    <figcaption>Stare at imaginary bug love blinks and purr purr purr purr.</figcaption>
-</figure>
-<a href="">Book Now >></a>
-
-</aside>
 </section>
 
 <footer class="footerimage">
@@ -58,4 +29,5 @@
     <p>© 2018 Kitties To Go!, LLC | Seattle, WA</p>
 </footer>
 </body>
+
 </html>
