uploaded cat photo

--- a/cat-of-the-week.html
+++ b/cat-of-the-week.html
@@ -14,11 +14,13 @@
 <body>
 <header>
 <section>
-Featured Cat of the Week
+<h1>Featured Cat of the Week</h1>
 </section>
 </header>
 
 <section>
+<p><b>Our featured cat of the week for adoption!</b></p>
+<img src="https://live.staticflickr.com/51/164785542_4ab59feb4f_b.jpg" alt="grumpy looking cat">
 
 </section>
 
