--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
         
     </header>
 
-    <section>
-
-        Empty
-    </section>
+    <nav><div class="portfolio">Homepage</div>
+        <ul>
+        <li><a href="cat-of-the-week.html">Adoption Link <i class="fa-solid fa-cat"></i></a></li>
+    
+    </nav>
 <section>
 <aside>
 <h3>CATS IN THE NEWS</h3>
@@ -46,10 +47,11 @@
     <img src="images/lesson04-mock3-sidebar-cat.jpg" alt="photo of a grey cat with green eyes">
     <figcaption>Stare at imaginary bug love blinks and purr purr purr purr.</figcaption>
 </figure>
-<a href="">Book Now >></a>
+<a href="cat-of-the-week.html">See all cats up for adoption >></a>
 
 </aside>
 </section>
+
 
 <footer class="footerimage">
     <img src="images/lesson04-mock5-cat-logo.png" alt="cat logo">
