--- a/cat-of-the-week.html
+++ b/cat-of-the-week.html
@@ -13,15 +13,37 @@
 
 <body>
 <header>
+    <nav><div class="portfolio">Adoption Page</div>
+        <ul>
+        <li><a href="index.html">Home <i class="fa-solid fa-cat"></i></a></li>
+    
+    </nav>
+
 <section>
 <h1>Featured Cat of the Week</h1>
 </section>
 </header>
 
 <section>
-<p><b>Our featured cat of the week for adoption!</b></p>
+    <article><p><b>Our featured cat of the week for adoption!</b></p></article>
+    <article class="container">
 <img src="https://live.staticflickr.com/51/164785542_4ab59feb4f_b.jpg" alt="grumpy looking cat">
+</article>
 
+</section>
+
+<section>
+    <article>
+    <h2>View more cats available for adoption</h2>
+    <p>Add a friendly feline to your pack.</p>
+</article>
+    <ul>
+
+    <li> <a href="#"><img src="images/grey-cat.jpg" alt="photo of a solid grey colored cat"></a><p>Harry</p></li>
+    <li> <a href="#"><img src="images/panda-cat.jpg" alt="photo of a striped grey colored cat in a panda outfit"></a><p>Panda</p></li>
+    <li> <a href="#"><img src="images/white-cat.jpg" alt="photo of a solid white colored cat"></a><p>Spooky</p></li>
+    <li> <a href="#"><img src="images/bob-cat.jpg" alt="photo of a bob cat"></a><p>Bob</p></li>
+    </ul>
 </section>
 
 <footer class="footerimage">
