--- a/cat-of-the-week.html
+++ b/cat-of-the-week.html
@@ -15,24 +15,21 @@
 <header>
     <nav><div class="portfolio">Adoption Page</div>
         <ul>
-        <li><a href="index.html">Home <i class="fa-solid fa-cat"></i></a></li>
+        <li><a href="index.html">Home <i class="fa-solid fa-cat"></i></a></li></ul>
     
     </nav>
 
-<section>
-<h1>Featured Cat of the Week</h1>
-</section>
 </header>
 
-<section>
-    <article><p><b>Our featured cat of the week for adoption!</b></p></article>
+<section><h1 class="center">Featured Cat of the Week</h1>
+    <article><h3><b>Our featured cat of the week for adoption!</b></h3></article>
     <article class="container">
 <img src="https://live.staticflickr.com/51/164785542_4ab59feb4f_b.jpg" alt="grumpy looking cat">
 </article>
 
 </section>
 
-<section>
+<section><h2 class="center">Adopt a Kitty</h2>
     <article>
     <h2>View more cats available for adoption</h2>
     <p>Add a friendly feline to your pack.</p>
