--- a/cat-of-the-week.html
+++ b/cat-of-the-week.html
@@ -29,7 +29,7 @@
 
 </section>
 
-<section><h2 class="center">Adopt a Kitty</h2>
+<section class="center"><h2>Adopt a Kitty</h2>
     <article>
     <h2>View more cats available for adoption</h2>
     <p>Add a friendly feline to your pack.</p>
