--- a/cat-of-the-week.html
+++ b/cat-of-the-week.html
@@ -23,9 +23,11 @@
 
 <section><h1 class="center">Featured Cat of the Week</h1>
     <article><h3><b>Our featured cat of the week for adoption!</b></h3></article>
-    <article class="container">
-<img src="https://live.staticflickr.com/51/164785542_4ab59feb4f_b.jpg" alt="grumpy looking cat">
-</article>
+    <figure class="center">
+        <img src="https://live.staticflickr.com/51/164785542_4ab59feb4f_b.jpg" alt="grumpy looking cat" style="width:10%">
+        <figcaption>Meet Freddy!</figcaption>
+      </figure>
+
 
 </section>
 
