--- a/cat-of-the-week.html
+++ b/cat-of-the-week.html
@@ -12,29 +12,32 @@
 </head>
 
 <body>
+<div class="wrapper">
+<div class="header">
 <header>
-    <nav><div class="portfolio">Adoption Page</div>
+
+    <nav>
         <ul>
-        <li><a href="index.html">Home <i class="fa-solid fa-cat"></i></a></li></ul>
-    
+        <li><a href="index.html">Home<i class="fa-solid fa-cat"></i></a></li>
+        </ul>
     </nav>
 
-</header>
 
-<section><h1 class="center">Featured Cat of the Week</h1>
-    <article><h3><b>Our featured cat of the week for adoption!</b></h3></article>
+</header>
+</div>
+
+<div class="three-one">
+    <h3>Featured Cat of the Week!</h3>
     <figure class="center">
         <img src="https://live.staticflickr.com/51/164785542_4ab59feb4f_b.jpg" alt="grumpy looking cat" style="width:10%">
         <figcaption>Meet Freddy!</figcaption>
       </figure>
+</div>
 
-
-</section>
-
-<section class="center"><h2>Adopt a Kitty</h2>
+<section class="four-one"><h2>Adopt a Kitty</h2>
     <article>
     <h2>View more cats available for adoption</h2>
-    <p>Add a friendly feline to your pack.</p>
+    <p>Add a friendly feline to your pack.<span class="sr-only">these links open a new tab</span></p>
 </article>
     <ul>
 
@@ -45,12 +48,15 @@
     </ul>
 </section>
 
-<footer class="footerimage">
-    <img src="images/lesson04-mock5-cat-logo.png" alt="cat logo">
-    <p>There is random text here for now. Lorem ipsen repeating</p>
-    <p>Footer link 1 / Footer link 2 / Footer link 3 / Footer link 4</p>
-    <p>© 2018 Kitties To Go!, LLC | Seattle, WA</p>
-</footer>
+<div class="footer">
+    <footer>
+        <img src="images/lesson04-mock5-cat-logo.png" alt="cat logo">
+        <p>There is random text here for now. Lorem ipsen repeating</p>
+        <p>Footer link 1 / Footer link 2 / Footer link 3 / Footer link 4</p>
+        <p>© 2018 Kitties To Go!, LLC | Seattle, WA</p>
+    </footer>
+    </div>
+</div>
 </body>
 
 </html>
