--- a/index.html
+++ b/index.html
@@ -13,50 +13,59 @@
   </head>
 
 <body>
-    <header>
-        
-    </header>
 
-    <nav><div class="portfolio">Homepage</div>
+<div class="wrapper">
+<div class="header"> 
+    <header>
+    <nav>
         <ul>
         <li><a href="cat-of-the-week.html">Adoption Link <i class="fa-solid fa-cat"></i></a></li>
-    </ul>
+        </ul>
     </nav>
-<section>
-<aside>
-<h3>CATS IN THE NEWS</h3>
-<h2>UPDATED VERSION</h2>
-<p>
+    </header>
+</div>
+
+
+<div class="three">
+    <h3>CATS IN THE NEWS</h3>
+    <p>
     Chew iPad power cord why must they do
     that, grab pompom in mouth and put in
     water dish. </p>
-<a href="">Find out more >></a>
+    <a href="">Find out more >></a>
 
 
-<p>
+    <p>
     Chew iPad power cord why must they do
     that, grab pompom in mouth and put in
     water dish.
     
-</p>
+    </p>
 
-<a href="">Find out more >></a>
+    <a href="">Find out more >></a>
 
-<h3> CAT OF THE WEEK </h3>
-<figure>
+</div>
+<div class="three-zero">
+
+    <h3> CAT OF THE WEEK </h3>
+    <figure>
     <img src="images/lesson04-mock3-sidebar-cat.jpg" alt="photo of a grey cat with green eyes">
-    <figcaption>Stare at imaginary bug love blinks and purr purr purr purr.</figcaption>
-</figure>
-<a href="cat-of-the-week.html">See all cats up for adoption >></a>
+    <figcaption>Stare at imaginary bug love blinks and purr purr purr purr. 
+        <span class="sr-only">this link open a new tab to show cats for adoption</span></figcaption>
+    </figure>
+    <a href="cat-of-the-week.html">See all cats up for adoption >></a>
 
-</aside>
-</section>
+</div>
 
-<footer class="footerimage">
+
+<div class="footer">
+<footer>
     <img src="images/lesson04-mock5-cat-logo.png" alt="cat logo">
     <p>There is random text here for now. Lorem ipsen repeating</p>
     <p>Footer link 1 / Footer link 2 / Footer link 3 / Footer link 4</p>
     <p>© 2018 Kitties To Go!, LLC | Seattle, WA</p>
 </footer>
+</div>
+</div>
 </body>
 </html>
