--- a/index.html
+++ b/index.html
@@ -15,57 +15,59 @@
 <body>
 
 <div class="wrapper">
-<div class="header"> 
+<div class="header"> <img class="cat-logo" src="images/cat-logo-grey.png" alt="company logo of a grey cat peeking around a corner">
     <header>
     <nav>
-        <ul>
+        <ul class="header-right">
         <li><a href="cat-of-the-week.html">Adoption Link <i class="fa-solid fa-cat"></i></a></li>
+        <li><a href="about-us.html">About Us <i class="fa-solid fa-paw"></i></a></li>
+        <li><a href="location.html">Location <i class="fa-solid fa-calendar-check"></i></a></li>
         </ul>
     </nav>
     </header>
 </div>
-
+  
 
 <div class="three">
-    <h3>CATS IN THE NEWS</h3>
+    <h3>SHOP FAVORITE CAT TOYS</h3>
+    <img 
+    src="images/cat-toy.jpg" 
+    srcset="images/cat-toy.jpg 300w"
+    sizes="(max-width: 760px) 7vw,
+        8vw"
+    alt="">
     <p>
-    Chew iPad power cord why must they do
-    that, grab pompom in mouth and put in
-    water dish. </p>
-    <a href="">Find out more >></a>
+        Entertainment for your cat </p>
+    <p><a href="">Shop the full cat collection >></a></p>
 
-
-    <p>
-    Chew iPad power cord why must they do
-    that, grab pompom in mouth and put in
-    water dish.
-    
-    </p>
-
-    <a href="">Find out more >></a>
 
 </div>
-<div class="three-zero">
+<div class="four">
 
     <h3> CAT OF THE WEEK </h3>
     <figure>
-    <img src="images/lesson04-mock3-sidebar-cat.jpg" alt="photo of a grey cat with green eyes">
-    <figcaption>Stare at imaginary bug love blinks and purr purr purr purr. 
-        <span class="sr-only">this link open a new tab to show cats for adoption</span></figcaption>
-    </figure>
+    <img 
+    src="images/lesson04-mock3-sidebar-cat.jpg"
+    srcset="images/lesson04-mock3-sidebar-cat.jpg 300w"
+    sizes="(max-width: 760px) 20vw,
+    25vw" 
+    alt="photo of a grey cat with green eyes">
+    <p>Each week we highlight a new cat up for adoption.
+    <span class="sr-only">this link open a new tab to show cats for adoption</span>
+    </p>
     <a href="cat-of-the-week.html">See all cats up for adoption >></a>
+    </figure>
 
 </div>
 
-
-<div class="footer">
-<footer>
-    <img src="images/lesson04-mock5-cat-logo.png" alt="cat logo">
-    <p>There is random text here for now. Lorem ipsen repeating</p>
-    <p>Footer link 1 / Footer link 2 / Footer link 3 / Footer link 4</p>
-    <p>© 2018 Kitties To Go!, LLC | Seattle, WA</p>
+<footer class="footer">
+<div class="image-overlay">
+    <img class="cat-logo" src="images/cat-logo.png" alt="cat logo">
+    <p>Finding great homes for cats, and providing their humans resources since 2024.</p>
+    <p>Careers / Contact / Shop / Terms </p>
+    <p>© 2024 Kitties To Go!, LLC | Seattle, WA</p>
+</div>
 </footer>
-</div>
 </div>
 </body>
 </html>
