--- a/about-us.html
+++ b/about-us.html
@@ -19,7 +19,7 @@
             <ul class="header-right">
             <li><a href="index.html">Home <i class="fa-solid fa-cat"></i></a></li>
             <li><a href="location.html">Location <i class="fa-solid fa-paw"></i></a></li>
-            <li><a href="cat-of-the-week.html">Cat of the Week <i class="fa-solid fa-calendar-check"></i></a></li>
+            <li><a href="cat-of-the-week.html">Adoption Link <i class="fa-solid fa-calendar-check"></i></a></li>
             </ul>
         </nav>
         </header>
