--- a/calendar.html
+++ b/calendar.html
@@ -1,7 +1,41 @@
-  
-    
-    <table class="two">
-        <h2>Catopia Calendar of Events</h2>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <title>Kitties to go</title>
+    <link rel="stylesheet" type="text/css" href="styles/kitties.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/aef11390a8.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+        <div class="wrapper">
+            <div class="header"> <img class="cat-logo" src="images/cat-logo-grey.png" alt="company logo of a grey cat peeking around a corner">
+                <header>
+                <nav>
+                    <ul class="header-right">
+                    <li><a href="index.html">Home <i class="fa-solid fa-cat"></i></a></li>
+                    <li><a href="location.html">Location <i class="fa-solid fa-paw"></i></a></li>
+                    <li><a href="cat-of-the-week.html">Adoption Link <i class="fa-solid fa-calendar-check"></i></a></li>
+                    </ul>
+                </nav>
+                </header>
+            </div>
+        <div class="month">      
+            <ul>
+              <li class="prev">&#10094;</li>
+              <li class="next">&#10095;</li>
+              <li>
+                April<br>
+                <span style="font-size:18px">2024</span>
+              </li>
+            </ul>
+          </div>
+    <table class="table">
+        
     <thead>
         <tr>
         <th>Sun</th>
@@ -14,7 +48,7 @@
   </tr>
   </thead>
   
-  <tbody>
+  <tbody class="days">
     <tr>
         <td></td>
         <td>1</td>
@@ -63,3 +97,17 @@
     </tr>
 </tbody>
 </table>
+</div>
+
+<footer class="footer">
+    <div class="image-overlay">
+        <img class="cat-logo" src="images/cat-logo.png" alt="cat logo">
+        <p>Finding great homes for cats, and providing their humans resources since 2024.</p>
+        <p>Careers / Contact / Terms </p>
+        <p>© 2024 Kitties To Go!, LLC | Seattle, WA</p>
+    </div>
+    </footer>
+</div>
+</body>
+
+</html>
