--- a/index.html
+++ b/index.html
@@ -27,6 +27,81 @@
     </header>
 </div>
 
+<div class="body">
+<div class="month">      
+    <ul>
+      <li class="prev">&#10094;</li>
+      <li class="next">&#10095;</li>
+      <li>
+        April<br>
+        <span style="font-size:18px">2024</span>
+      </li>
+    </ul>
+  </div>
+<table class="table">
+
+<thead>
+<tr>
+<th>Sun</th>
+<th>Mon</th>
+<th>Tue</th>
+<th>Wed</th>
+<th>Thu</th>
+<th>Fri</th>
+<th>sat</th>
+</tr>
+</thead>
+
+<tbody class="days">
+<tr>
+<td></td>
+<td>1</td>
+<td>2</td>
+<td>3</td>
+<td>4</td>
+<td>5</td>
+<td><span class="active">6</span></td>
+</tr>
+<tr></tr>
+<tr>
+<td>7</td>
+<td>8</td>
+<td>9</td>
+<td>10</td>
+<td><span class="active">11</span></td>
+<td>12</td>
+<td><span class="active">13</span></td>
+</tr>
+<tr>
+<td>14</td>
+<td>15</td>
+<td>16</td>
+<td>17</td>
+<td>18</td>
+<td>19</td>
+<td><span class="active">20</span></td>
+</tr>
+<tr>
+<td>21</td>
+<td>22</td>
+<td>23</td>
+<td>24</td>
+<td><span class="active">25</span></td>
+<td>26</td>
+<td><span class="active">27</span></td>
+</tr>
+<tr>
+<td>28</td>
+<td>29</td>
+<td>30</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</div>
 
 
 <div class="three">
@@ -59,6 +134,7 @@
     <a href="cat-of-the-week.html">See all cats up for adoption >></a>
     </figure>
 
+</div>
 </div>
 
 <footer class="footer">
