calendar notes added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 </div>
 
 <div class="body">
+    <h2>Catopia Calendar of Events</h2>
 <div class="month">      
     <ul>
       <li class="prev">&#10094;</li>
@@ -101,6 +102,9 @@
 </tr>
 </tbody>
 </table>
+
+<p><b>April 11th and 25th:</b> Join us for our coffee and cat meet up.</p>
+<p><b>April 6th, 13th, 20th, 27th:</b> Volunteer shifts available.</p>
 </div>
 
 
@@ -136,6 +140,8 @@
 
 </div>
 </div>
+
+<br>
 
 <footer class="footer">
 <div class="image-overlay">
