--- a/location.html
+++ b/location.html
@@ -20,6 +20,7 @@
             <li><a href="index.html">Home <i class="fa-solid fa-cat"></i></a></li>
             <li><a href="about-us.html">About Us <i class="fa-solid fa-paw"></i></a></li>
             <li><a href="cat-of-the-week.html">Adoption Link <i class="fa-solid fa-calendar-check"></i></a></li>
+            <li><a href="location.html">Location <i class="fa-solid fa-calendar-check"></i></a></li>
             </ul>
         </nav>
         </header>
