--- a/about-us.html
+++ b/about-us.html
@@ -33,8 +33,8 @@
     
         <video class=video1 width=1200 height=600 controls >
             <source 
-            src="images/cat-adoption-video.mp4"/>
-            <track src="subtitles_en.vtt" kind="captions" label="captions" srclang="en" default/>
+            src="images/cat-adoption-video.mp4">
+            <track src="subtitles_en.vtt" kind="captions" label="captions" srclang="en" default>
             Your browser doesn't support HTML5.
             </video>
             <h2>Our History</h2>
