--- a/about-us.html
+++ b/about-us.html
@@ -38,7 +38,24 @@
             Your browser doesn't support HTML5.
             </video>
             <h2>Our History</h2>
-        <p>Established in 2024 as the premier place to adopt and learn more about cats.</p>
+        <p>Established in 2024 as the premier place to adopt and learn more about cats.<span class="sr-only">this link plays a video showing cats wanting to be adopted</span></p>
+    </div>
+
+    <div class="six"><h2>Adopt a Kitty</h2>
+        <div>
+        <h2>View more cats available for adoption</h2>
+        <p>Add a friendly feline to your pack.<span class="sr-only">these links open a new tab</span></p>
+        </div>
+    
+        <div>
+        <ul>
+    
+        <li> <a href="#"><img src="images/grey-cat.jpg" alt="photo of a solid grey colored cat"></a><p>Harry</p></li>
+        <li> <a href="#"><img src="images/panda-cat.jpg" alt="photo of a striped grey colored cat in a panda outfit"></a><p>Panda</p></li>
+        <li> <a href="#"><img src="images/white-cat.jpg" alt="photo of a solid white colored cat"></a><p>Spooky</p></li>
+        <li> <a href="#"><img src="images/bob-cat.jpg" alt="photo of a bob cat"></a><p>Bob</p></li>
+        </ul>
+    </div>
     </div>
 
 
@@ -46,7 +63,7 @@
         <div class="image-overlay">
             <img class="cat-logo" src="images/cat-logo.png" alt="cat logo">
             <p>Finding great homes for cats, and providing their humans resources since 2024.</p>
-            <p>Careers / Contact / Shop / Terms </p>
+            <p>Careers / Contact / Terms </p>
             <p>© 2024 Kitties To Go!, LLC | Seattle, WA</p>
         </div>
         </footer>
