--- a/location.html
+++ b/location.html
@@ -46,6 +46,23 @@
 
 </section>
 </div>
+
+<div class="six"><h2>Adopt a Kitty</h2>
+    <div>
+    <h2>View more cats available for adoption</h2>
+    <p>Add a friendly feline to your pack.<span class="sr-only">these links open a new tab</span></p>
+    </div>
+
+    <div>
+    <ul>
+
+    <li> <a href="#"><img src="images/grey-cat.jpg" alt="photo of a solid grey colored cat"></a><p>Harry</p></li>
+    <li> <a href="#"><img src="images/panda-cat.jpg" alt="photo of a striped grey colored cat in a panda outfit"></a><p>Panda</p></li>
+    <li> <a href="#"><img src="images/white-cat.jpg" alt="photo of a solid white colored cat"></a><p>Spooky</p></li>
+    <li> <a href="#"><img src="images/bob-cat.jpg" alt="photo of a bob cat"></a><p>Bob</p></li>
+    </ul>
+</div>
+</div>
 <footer class="footer">
     <div class="image-overlay">
         <img class="cat-logo" src="images/cat-logo.png" alt="cat logo">
