--- a/adoption-link.html
+++ b/adoption-link.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -12,20 +13,19 @@
 </head>
 
 <body>
-<div class="wrapper">
-    <div class="header"> <img class="cat-logo" src="images/cat-logo-grey.png" alt="company logo of a grey cat peeking around a corner">
-        <header>
-        <nav>
-            <ul class="header-right">
-                <li><a href="index.html">Home <i class="fa-solid fa-cat"></i></a></li>
-                <li><a href="about-us.html">About Us <i class="fa-solid fa-paw"></i></a></li>
-                <li><a href="adoption-link.html">Adoption Link <i class="fa-solid fa-calendar-check"></i></a></li>
-                <li><a href="location.html">Location <i class="fa-solid fa-calendar-check"></i></a></li>
-            </ul>
-        </nav>
-        </header>
-    </div>
-    
+    <div class="wrapper">
+        <div class="header"> <img class="cat-logo" src="images/cat-logo-grey.png" alt="company logo of a grey cat peeking around a corner">
+            <header>
+            <nav>
+                <ul class="header-right">
+                    <li><a href="index.html">Home <i class="fa-solid fa-cat"></i></a></li>
+                    <li><a href="about-us.html">About Us <i class="fa-solid fa-paw"></i></a></li>
+                    <li><a href="adoption-link.html">Adoption Link <i class="fa-solid fa-calendar-check"></i></a></li>
+                    <li><a href="location.html">Location <i class="fa-solid fa-calendar-check"></i></a></li>
+                </ul>
+            </nav>
+            </header>
+        </div>
 
 <div class="five">
     <h3>Featured Cat of the Week!</h3>
@@ -34,18 +34,20 @@
         src="images/grumpy-cat-300.jpg" 
         srcset="images/grumpy-cat-300.jpg 300w,
         images/grumpy-cat-original.jpg 600w"
-        sizes="(max-width: 760px) 50vw, (max-width: 1200px) 30vw,
+        sizes="(max-width: 760px) 20vw, (min-width: 1200px) 30vw,
             15vw"
         alt="grumpy looking cat">
         <figcaption>Meet Freddy!</figcaption>
       </figure>
 </div>
 
-<section class="six"><h2>Adopt a Kitty</h2>
-    <article>
+<div class="six"><h2>Adopt a Kitty</h2>
+    <div>
     <h2>View more cats available for adoption</h2>
     <p>Add a friendly feline to your pack.<span class="sr-only">these links open a new tab</span></p>
-</article>
+    </div>
+
+    <div>
     <ul>
 
     <li> <a href="#"><img src="images/grey-cat.jpg" alt="photo of a solid grey colored cat"></a><p>Harry</p></li>
@@ -53,7 +55,8 @@
     <li> <a href="#"><img src="images/white-cat.jpg" alt="photo of a solid white colored cat"></a><p>Spooky</p></li>
     <li> <a href="#"><img src="images/bob-cat.jpg" alt="photo of a bob cat"></a><p>Bob</p></li>
     </ul>
-</section>
+</div>
+</div>
 
 <footer class="footer">
     <div class="image-overlay">
