--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <div>
     <h2>Catopia Calendar of Events</h2>
-<div class="month">      
+<div class="month"  style="overflow-x: auto;">      
     <ul>
       <li class="prev">&#10094;</li>
       <li class="next">&#10095;</li>
@@ -40,7 +40,7 @@
       </li>
     </ul>
   </div>
-<table class="table">
+<table>
 
 <thead>
 <tr>
@@ -138,6 +138,22 @@
     <a href="cat-of-the-week.html">See all cats up for adoption >></a>
     </figure>
 
+</div>
+<div class="six-8"><h2>Adopt a Kitty</h2>
+    <div>
+    <h2>View more cats available for adoption</h2>
+    <p>Add a friendly feline to your pack.<span class="sr-only">these links open a new tab</span></p>
+    </div>
+
+    <div>
+    <ul>
+
+    <li> <a href="#"><img src="images/grey-cat.jpg" alt="photo of a solid grey colored cat"></a><p>Harry</p></li>
+    <li> <a href="#"><img src="images/panda-cat.jpg" alt="photo of a striped grey colored cat in a panda outfit"></a><p>Panda</p></li>
+    <li> <a href="#"><img src="images/white-cat.jpg" alt="photo of a solid white colored cat"></a><p>Spooky</p></li>
+    <li> <a href="#"><img src="images/bob-cat.jpg" alt="photo of a bob cat"></a><p>Bob</p></li>
+    </ul>
+</div>
 </div>
 
 <br>
