--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Kitties to go</title>
+    <meta name="viewport" content="width-device, initial-scale=1">
+    <title>Catopia Haven</title>
     <link rel="stylesheet" type="text/css" href="styles/kitties.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,10 +28,9 @@
     </nav>
     </header>
 </div>
-
-<div>
-    <h2>Catopia Calendar of Events</h2>
-<div class="month"  style="overflow-x: auto;">      
+    
+<div class="month"  style="overflow-x: auto;">   
+    <h2>Catopia Calendar of Events</h2>   
     <ul>
       <li class="prev">&#10094;</li>
       <li class="next">&#10095;</li>
@@ -39,8 +39,8 @@
         <span style="font-size:18px">2024</span>
       </li>
     </ul>
-  </div>
-<table>
+
+<table class="table">
 
 <thead>
 <tr>
