Added more formating to the print screen

--- a/adoption-link.html
+++ b/adoption-link.html
@@ -4,7 +4,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Kitties to go</title>
+    <meta name="viewport" content="width-device, initial-scale=1">
+    <title>Catopia Haven</title>
     <link rel="stylesheet" type="text/css" href="styles/kitties.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
